@@ -1,6 +1,8 @@
 Changes to Version 2.1-4
 
-  o Updated  translations (with thanks): Brazilian Portuguese (Marilia Sa Carvalho and Adriano Azevedo-Filho); Indonesian (I Made Tirta).
+  o Moved knitr and markdown packages to Suggests: to accommodate Debian (request of Dirk Eddelbuettel).
+
+  o Updated  translations (with thanks): Brazilian Portuguese (Marilia Sa Carvalho and Adriano Azevedo-Filho); Indonesian (I Made Tirta); Japanese (Takaharu Araki).
 
 Changes to Version 2.1-3
 
